# dir_watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: watcher.cpp
lib/include/: watcher.h
